<resources>
    <string name="app_name">Budapest</string>
    <string name="budapest">Budapest</string>

    <string name="facts_you_didn_t_know_about_budapest">Facts you didn\'t know about Budapest</string>
    <string name="budapest_in_hot">Budapest in hot. Literally, since Budapest has more thermal springs than any other capital city in the world. An amazing 70 million liters of thermal water rises to the surface daily. The hot springs have given birth to dozens of medicinal baths and to a bathing culture dating back to Roman times.</string>
    <string name="largest_parliament">Budapest is home to the third largest Parliament building in the world</string>
    <string name="oldest_subway">Budapest has the oldest subway-line in mainland Europe.</string>
    <string name="the_budapest_zoo">The Budapest Zoo is one of the oldest zoos in the world. The Budapest Zoo opened its doors in 1865 and in addition to the animals it features a number of noteworthy Art Nouveau buildings and structures, like the Elephant House, the Palm House and the main entrance.</string>
    <string name="art_and_culture">Budapest is big on art and culture. There are more than 40 theaters and over 100 museums and galleries in the city. Many concerts, festivals and events are held year-round, not to mention performances at the famous Opera House, which is considered to be among the best opera houses in the world.</string>
    <string name="english1">How are you?</string>
    <string name="hung1">Hogy vagy?</string>
    <string name="english2">What is your name?</string>
    <string name="english3">Where is the opera?</string>
    <string name="english4">Can you take us a picture?</string>
    <string name="english5">Where is the restaurant?</string>
    <string name="english6">Where can I find a good hotel?</string>
    <string name="english7">Can you help me, please?</string>
    <string name="english8">Where can I find an exchange?</string>
    <string name="hung2">Mi a neved?</string>
    <string name="hung3">Hol van az opera?</string>
    <string name="hung4">Képzelhetsz nekünk egy képet?</string>
    <string name="hung5">Merre van az étterem?</string>
    <string name="hung6">Hol találok egy jó szállodát?</string>
    <string name="hung7">Tudnál segíteni?</string>
    <string name="hung8">Hol találhatok cserét?</string>
    <string name="opera_house">Opera House</string>
    <string name="shoes_danube">The Shoes on the Danube</string>
    <string name="choco_museum">The Chocolate Museum</string>
    <string name="opera_description">The opera house in Budapest stands as one of the most beautiful Neo-Renaissance buildings in Europe. When it was opened in 1884, the city shared the administrative duties of the Austro-Hungarian Empire with Vienna. In fact, Emperor Franz Joseph commissioned its design. Construction included the use of marble and frescos by some of the best artisans of that era. The Budapest Opera House quickly became one of the most prestigious musical institutions in Europe.</string>
    <string name="shoes_description">The Shoes on the Danube Bank is a memorial in Budapest, Hungary. Conceived by film director Can Togay, he created it on the east bank of the Danube River with sculptor Gyula Pauer to honor the people (mainly Budapest Jews) who were killed by fascist Arrow Cross militiamen in Budapest during World War II. They were ordered to take off their shoes, and were shot at the edge of the water. It represents their shoes left behind on the bank.</string>
    <string name="choco_description">The building of the Museum is quite elegant, stylish. It was a hunting Castle of Count Wagner in 1902 in the midst of a wildlife area. From 1930 they started to call this area Arpadföld (residential area with houses). After in the communist years it served as a public building: school, police, cinema, cultural building. The Municipality selled the building in 1998. Elemér Farkas loved the ruined building at first sight. He saw how the building will look like after renovation.</string>
    <string name="Borbiróság">Borbiróság</string>
    <string name="Borbiróság_description">Just a stone’s throw from Great Market Hall – from where it sources many of its ingredients – the refreshingly low-key “Wine Court” is one of the more satisfying places to sample modern, affordable Hungarian cuisine. A good choice is the veal with foie gras served with pepper sauce and dumplings (£10.50) and a salty caramel and pear crumble (£2.80) accompanied by a glass of delicious dessert wine tokaj aszú to round off the evening .</string>
    <string name="doblo">Doblo</string>
    <string name="doblo_description">Hungarian wine may not be as famous as some, but it has fantastic pedigree. Among the rash of wine bars that have sprung up throughout the city, the brick-vaulted Doblo, in the atmospheric Jewish quarter, is the most relaxing. It has more than 200 varieties from Hungary’s 22 wine-growing regions, many available by the glass, perhaps paired with a ham and cheese platter. For oenophiles, there are dedicated tasting sessions (£22).</string>
    <string name="tamp"><![CDATA[Tamp & Pull]]></string>
    <string name="tamp_description"><![CDATA[Coffee – increasingly of the artisanal variety – is now big business in Budapest, and few places do it quite like Tamp & Pull, one of the new breed of espresso bars. It’s a tiny space but run through with charm, and the coffee is exquisite, lovingly crafted by champion baristas using beans from around the globe, details of which are displayed across the walls. It would also be remiss not to try one of their delectable pastries.]]></string>
    <string name="restaurants">Restaurants</string>
    <string name="attractions">Attractions</string>
    <string name="pocket">Pocket Dictionary</string>
    <string name="history">History</string>
    <string name="currency">Currency</string>
    <string name="cuisine">Cuisine</string>
    <string name="dollar1">1 Dollar</string>
    <string name="forint_dollar">283.68 Hungarian forints</string>
    <string name="euro">1 Euro</string>
    <string name="forint_euro">309.91 Hungarian forints</string>
    <string name="gbp">1 British Pound</string>
    <string name="forint_gbp">365.36 Hungarian forints</string>
    <string name="leu">1 Leu</string>
    <string name="forint_leu">68.19 Hungarian forints</string>
    <string name="goulash">Goulash</string>
    <string name="kurtocs">Kürtőskalács</string>
    <string name="paprika">Paprika chicken</string>
    <string name="peppers">Peppers</string>
    <string name="goulash_description">Magyar cuisine is one the least known and most flavourful and rich cuisines of the world.</string>
    <string name="kurtoch_description">Hungarians are quite sweet-toothed, so there is no lack in sugary delicacies either.</string>
    <string name="paprika_description">Paprika is the culinary symbol of the country.</string>
    <string name="peppers_descriptio">Hungarian cuisine today shows great regional variety.</string>
    <string name="hungarian_tr">Tudsz nekünk fotót?</string>
</resources>
